# devmind-ai

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.en.md  README.md  README.zh-TW.md  pyproject.toml
devmind/: __init__.py  cli.py
devmind/ai/: __init__.py  base.py  ollama.py  openai.py
devmind/analyzer/: __init__.py  metrics.py  parser.py  reporter.py
devmind/generators/: __init__.py  docs.py  mindmap.py
devmind/utils/: __init__.py  config.py
tests/: test_generators.py  test_metrics.py  test_parser.py
