[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "devmind-ai"
version = "1.0.0"
description = "DevMind AI - 智能开发者思维助手，基于AI的代码分析、注释生成与思维导图工具"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "DevMind Team", email = "dev@devmind.ai"}
]
keywords = ["ai", "developer-tools", "code-analysis", "documentation", "mindmap", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Documentation",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.9"
dependencies = [
    "click>=8.0.0",
    "rich>=13.0.0",
    "jinja2>=3.1.0",
    "pyyaml>=6.0",
    "requests>=2.28.0",
    "tree-sitter>=0.20.0",
    "tree-sitter-python>=0.20.0",
    "tree-sitter-javascript>=0.20.0",
    "tree-sitter-go>=0.20.0",
    "tree-sitter-java>=0.20.0",
]

[project.optional-dependencies]
openai = ["openai>=1.0.0"]
ollama = ["ollama>=0.1.0"]
all = ["openai>=1.0.0", "ollama>=0.1.0"]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]

[project.scripts]
devmind = "devmind.cli:main"

[project.urls]
Homepage = "https://github.com/gitstq/devmind-ai"
Documentation = "https://github.com/gitstq/devmind-ai#readme"
Repository = "https://github.com/gitstq/devmind-ai"
Issues = "https://github.com/gitstq/devmind-ai/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["devmind*"]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311', 'py312']

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=devmind --cov-report=term-missing --cov-report=html"
